# zoocache

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  build.sh  cliff.toml  docker-compose.yml  docs-requirements.txt  lint.sh  mkdocs.yml  pyproject.toml  run_integration_tests.sh  tests.sh
.github/workflows/: autorelease.yml  benchmarks.yml  ci.yml  pr-changelog.yml
_plugins/: include_markdown.rb
benchmarks/: data.js  repro_bottleneck.py  run_heavy_load.py  run_tti_bench.py  serializer_bench.py  test_core.py  test_django.py  test_django_serializer.py  test_fastapi.py  test_lazy.py  test_litestar.py  test_load.py  test_storage.py  utils.py
benchmarks/reports/: benchmarks_summary.md  compare_caches.py  hardware.md  update_readme.py
dev/bench/: data.js
docker/: otel-collector-config.yaml  prometheus.yml
docs/: architecture.md  cli.md  concepts.md  distributed.md  django.md  django_serializers.md  django_user_guide.md  fastapi.md  index.md  invalidation.md  litestar.md  reliability.md  serialization.md  setup.md  troubleshooting.md  user_guide.md
docs/adr/: 0001-prefix-trie-invalidation.md  0004-serialization-strategy.md  0005-singleflight-pattern.md  0009-robust-sync-and-error-handling.md
docs/benchmarks/: README.md  data.js
docs/configuration/: index.md  storage.md
docs/reference/: api.md
docs/telemetry/: index.md  otel.md  prometheus.md
examples/: django_adapter_demo.py  drf_complex_cache.py  drf_real_serializers.py  serializer_cache.py  usage_demo.py
plans/: documentacion_mejora_plan.md  documentacion_profesional_propuesta.md
src/zoocache/: __init__.py  cli.py  context.py  core.py
src/zoocache/contrib/: django.py
src/zoocache/contrib/django/: __init__.py  model.py  serializer.py  util.py
src/zoocache/contrib/fastapi/: route.py
src/zoocache/contrib/litestar/: route.py
src/zoocache/telemetry/: __init__.py  base.py  manager.py
src/zoocache/telemetry/adapters/: logs.py  opentelemetry.py  prometheus.py  redis_adapter.py
src/zoocache/tui/: app.py  app.tcss  commands.py  screens.py  sync.py  widgets.py
src/zoocache_core/: core.rs  flight.rs  lib.rs  trie.rs  utils.rs  worker.rs
src/zoocache_core/bridge/: core_impl.rs  mod.rs  read.rs  utils.rs  write.rs
src/zoocache_core/bus/: local.rs  mod.rs  redis_pubsub.rs
src/zoocache_core/storage/: lmdb.rs  memory.rs  mod.rs  redis.rs
tests/: conftest.py  test_async.py  test_cache_operations.py  test_clear_operations.py  test_cli.py  test_complex_sqlite.py  test_concurrency.py  test_context.py  test_contrib_fastapi.py  test_contrib_litestar.py  test_core_functions.py  test_django_adapter.py  test_django_m2m_signal_kwargs.py  test_error_propagation.py  test_fidelity.py  test_fixed_ttl.py  test_flight_timeout.py  test_generate_key.py  test_invalidate_async.py  test_invalidation.py  test_lmdb_map_size.py  test_lru_cache_size_validation.py  test_lru_eviction.py  test_multiprocess_lmdb.py  test_redis_error_semantics.py  test_serializer_context_isolation.py  test_serializer_m2m.py  test_serializer_mixin.py  test_storage.py  test_tag_validation.py  test_tag_version.py  test_telemetry_base.py  test_telemetry_integration.py  test_telemetry_manager.py  test_ttl.py  test_ttl_overflow.py  test_tui_sync.py
tests/integration/: test_telemetry_comparison.py
tests/test_telemetry_adapters/: test_logs_adapter.py  test_opentelemetry_adapter.py  test_prometheus_adapter.py  test_redis_adapter.py
