[package]
name = "zoocache"
version = "2026.2.8"
edition = "2024"

[lib]
name = "_zoocache"
path = "src/zoocache_core/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { version = "0.27.2", features = ["abi3-py310"] }
dashmap = "6.1.0"
sha2 = "0.10"
redis = { version = "1.0.2", features = ["r2d2"] }
r2d2 = "0.8"
lmdb = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
lz4_flex = "0.11"
pythonize = "0.27"
serde_bytes = "0.11"
serde-transcode = "1.1"
log = "0.4"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
panic = "abort"
