[package]
name = "zoocache"
version = "2026.3.3"
edition = "2024"

[lib]
name = "_zoocache"
path = "src/zoocache_core/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { version = "0.28.2", features = ["abi3-py310"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1.89"
dashmap = "6.1.0"
redis = { version = "1.0.5", features = ["tokio-comp", "aio"] }
lmdb = "0.8.0"
once_cell = "1.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
lz4_flex = "0.12"
pythonize = "0.28"
serde_bytes = "0.11"
serde-transcode = "1.1"
log = "0.4"
lru = "0.16"
sysinfo = "0.38.3"
serde_json = "1.0.149"
smallvec = { version = "1.15.1", features = ["serde"] }
crossbeam-channel = "0.5.15"
rand = "0.10.0"
foldhash = "0.2.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
panic = "abort"
