[project]
name = "zoocache"
dynamic = ["version"]
description = "Cache that invalidates when your data changes, not when a timer expires. Rust-powered semantic invalidation for Python."
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Alberto Daniel Badia", email = "alberto_badia@enlacepatagonia.com" },
]

requires-python = ">=3.10"

dependencies = []

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "zoocache._zoocache"
python-source = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "maturin>=1.7",
    "mkdocstrings>=1.0.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-include-markdown-plugin>=7.2.0",
]
